--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,46 @@
 {
-    "name" : "Reading Time",
-    "description" : "Displays Reading time for Medium Articles",
-    "version" : "1.0",
-    "manifest_version" : 3,
-    "action" : {
-        "default_popup" : "name.html",
-        "default_icon"  : "icon.png"
-    },
-    "content_scripts" : [
-        {
-            "js" : ["scripts/content.js"],
-            "matches" : ["https://medium.com/*"]
-        }
-    ],
-    "background" : {
-        "service_worker" : "background.js"
-    },
-    "permissions": ["activeTab"]
+    "manifest_version": 3,
 
+    "name": "YouTube Timestamps",
+    "description": "Shows YouTube timestamps from comments.",
+    "version": "1.0.1",
+
+    "browser_specific_settings": {
+        "gecko": {
+            "id": "youtube-timestamps@ris58h"
+        }
+    },
+
+    "permissions": ["declarativeNetRequestWithHostAccess"],
+    "host_permissions": ["https://www.youtube.com/"],
+    "declarative_net_request": {
+        "rule_resources": [
+            {
+                "id": "ruleset_1",
+                "enabled": true,
+                "path": "rules.json"
+            }
+        ]
+    },
+
+    "icons": {
+        "16": "icons/icon16.png",
+        "48": "icons/icon48.png",
+        "128": "icons/icon128.png"
+    },
+
+    "background": {
+        "service_worker": "background/background.js",
+        "type": "module",
+        "page": "background/background.html"
+    },
+
+    "content_scripts": [
+        {
+            "matches": ["https://www.youtube.com/*", "https://www.youtube-nocookie.com/embed/*"],
+            "all_frames": true,
+            "js": ["content/content.js"],
+            "css": ["content/content.css"]
+        }
+    ]
 }
