--- a/manifest.json
+++ b/manifest.json
@@ -1,27 +1,25 @@
 {
     "manifest_version": 3,
 
-    "name": "YouTube Timestamps",
-    "description": "Shows YouTube timestamps from comments.",
-    "version": "1.0.1",
+    "name": "AI YouTube Timestamps",
+    "description": "Generate AI-powered timestamps for YouTube videos.",
+    "version": "2.0.0",
 
     "browser_specific_settings": {
         "gecko": {
-            "id": "youtube-timestamps@ris58h"
+            "id": "ai-youtube-timestamps@ris58h"
         }
     },
 
-    "permissions": ["declarativeNetRequestWithHostAccess"],
-    "host_permissions": ["https://www.youtube.com/"],
-    "declarative_net_request": {
-        "rule_resources": [
-            {
-                "id": "ruleset_1",
-                "enabled": true,
-                "path": "rules.json"
-            }
-        ]
-    },
+    "permissions": [
+        "activeTab",
+        "storage"
+    ],
+    "host_permissions": [
+        "https://www.youtube.com/*", 
+        "https://www.youtube-nocookie.com/*",
+        "http://localhost:8000/*"
+    ],
 
     "icons": {
         "16": "icons/icon16.png",
@@ -29,18 +27,27 @@
         "128": "icons/icon128.png"
     },
 
+    "action": {
+        "default_popup": "popup/popup.html",
+        "default_title": "Generate AI Timestamps",
+        "default_icon": {
+            "16": "icons/icon16.png",
+            "48": "icons/icon48.png",
+            "128": "icons/icon128.png"
+        }
+    },
+
     "background": {
         "service_worker": "background/background.js",
-        "type": "module",
-        "page": "background/background.html"
+        "type": "module"
     },
 
     "content_scripts": [
         {
             "matches": ["https://www.youtube.com/*", "https://www.youtube-nocookie.com/embed/*"],
             "all_frames": true,
-            "js": ["content/content.js"],
-            "css": ["content/content.css"]
+            "js": ["scripts/content.js"],
+            "css": ["scripts/content.css"]
         }
     ]
 }
